[gd_scene load_steps=7 format=3 uid="uid://bg48fgpn1irnj"]

[ext_resource type="Texture2D" uid="uid://bj64ndxuxlgwk" path="res://art/card/card_background.png" id="1_6rydu"]
[ext_resource type="Script" path="res://scene/card/card.gd" id="1_uesp4"]
[ext_resource type="LabelSettings" uid="uid://sobj1yw70rat" path="res://art/font/card.tres" id="2_v0rus"]
[ext_resource type="Texture2D" uid="uid://idoebtifkcqw" path="res://art/card/card_frame_yellow.png" id="3_6e3ec"]
[ext_resource type="FontFile" uid="uid://jyeokg8ohqjm" path="res://art/font/sofachrome_rg.otf" id="5_6y04s"]

[sub_resource type="LabelSettings" id="LabelSettings_ag08p"]
font_size = 10
font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
outline_size = 1
outline_color = Color(0.340339, 0.340339, 0.340339, 1)
shadow_color = Color(0, 0, 0, 0.141176)

[node name="Card" type="Node2D"]
script = ExtResource("1_uesp4")

[node name="Sprite2D_Background" type="Sprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.041, 0.041)
texture = ExtResource("1_6rydu")

[node name="Sprite2D_Card" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_6e3ec")

[node name="Label_CardName" type="Label" parent="."]
offset_left = -58.0
offset_top = -109.0
offset_right = 60.0
offset_bottom = -86.0
text = "ストライクストライクストライク
"
label_settings = ExtResource("2_v0rus")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 2

[node name="Label_Description" type="Label" parent="."]
offset_left = -73.0
offset_top = 36.0
offset_right = 74.0
offset_bottom = 102.0
text = "BBCode タグの一部は、スクリプト変数のツールチップやクラス参照の XML ソースで使用できます@export。詳細については、クラス参照 BBCodeを参照してください。"
label_settings = SubResource("LabelSettings_ag08p")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="Label_Cost" type="Label" parent="."]
offset_left = -77.0
offset_top = -110.0
offset_right = -44.0
offset_bottom = -78.0
theme_override_colors/font_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_colors/font_shadow_color = Color(0.577008, 0.577008, 0.577008, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("5_6y04s")
theme_override_font_sizes/font_size = 17
text = "9
"
horizontal_alignment = 1
vertical_alignment = 1
